# vocabulary_calculator

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  mypy.ini  pyproject.toml
script/: main.py  text_processor.py  utils.py
script/tests/: test_processor.py
script/tests/test_helpers/: text.txt
