[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core"]

[tool.poetry]
authors = ["Aleksandr Sosedskyi <sanya1sosedskiy@gmail.com>"]
description = "Calculates vocabulary in files"
name = "vocabulary-calculator"
readme = "README.md"
version = "0.1.0"

[tool.poetry.dependencies]
numpy = "^1.26.1"
pypdf = "^3.16.4"
python = "3.12"
spacy = "^3.7.2"
word-forms = "^2.1.0"

[tool.poetry.group.dev.dependencies]
black = "^23.10.1"
flake8 = "^6.1.0"
isort = "^5.12.0"
mypy = "^1.6.1"
pre-commit = "^3.5.0"
pytest = "^7.4.3"
